Sat Oct 22 22:37:37 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* input.c (Input_ArgSub): Fix processing comments.  Fix buffer
	overflow case.

Sat Oct 22 22:29:52 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* eval.c (GetInt): Value 1 character long string should be
	handled as unsigned.
	(COMPARE): Support comparing integers and 1 character long
	strings.
	* regression/tests_pass/operator_relational.s: Enhance.

Sat Oct 22 22:22:45 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* INSTALL: Add.

Fri Oct 14 02:15:19 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* asm.c (ASM_DoPass): Break out assemble loop when longjmp is
	taken.
	* filename.c, filename.h: Change eB_Dot_A into eB_DirSep_A.
	* include.c (Include_Get): Follow eB_Dot_A change into eB_DirSep_A.
	Fix include path processing.
	* output.c (): Follow eB_Dot_A change into eB_DirSep_A.

Mon Oct 10 23:20:11 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* filestack.c (File_GetLine): don't chop off last character of file
	when it is not NL.
	* decode.c (decode): Avoid early breakout when mnemonic hasn't been
	fully matched.
	* regression/tests_pass/macro.s: Enhance test.

Mon Oct 10 00:55:46 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* code.c (codePosition): Add workaround.
	* eval.c (evalBinop): Enhance Op_ne for Symbol comparison.
	* regression/tests_pass/operator_relational.s: Enhance with Symbol
	equivalence tests.

Sat Oct  8 19:09:57 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* area.c (c_align): Add support for ABS area.  Negative offset values
	are allowed.  Simplified implementation.
	* regression/tests_pass/align.s: Add.
	* decode.c (oDecodeTable): Add FIXME for RLIST.

Sat Oct  8 16:43:23 CEST 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.h (SYMBOL_NOTRESOLVED): Remove.
	(SYMBOL_RW): Add.
	* symbol.c (symbolPrint): Add support for SYMBOL_MACRO_LOCAL and
	SYMBOL_RW.  Follow SYMBOL_NOTRESOLVED removal.